--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <section class="section">
       <div class="section-head">
         <h2 class="section-title">New Collection</h2>
-        <a class="section-link" href="new-arrivals.html">See more</a>
+        <a class="section-link" href="products.html?sort=newest">See more</a>
       </div>
 
       <div id="newCollectionStatus" class="small" style="margin-bottom:10px;"></div>
