--- a/products.html
+++ b/products.html
@@ -67,8 +67,8 @@
   <div id="footer"></div>
  
 <script type="module">
-  import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
-  import { supabase } from "./assets/supabase.js";
+  import { renderHeader, renderFooter, hydrateHeaderAuth } from "/assets/ui.js";
+  import { supabase } from "/assets/supabase.js";
 
   document.getElementById("header").innerHTML = renderHeader("products");
   document.getElementById("footer").innerHTML = renderFooter();
