--- a/orders.html
+++ b/orders.html
@@ -2,32 +2,39 @@
 <html>
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CKQ1EXBHY6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CKQ1EXBHY6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);} 
+    gtag('js', new Date());
+    gtag('config', 'G-CKQ1EXBHY6');
+  </script>
 
-  gtag('config', 'G-CKQ1EXBHY6');
-</script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Orders — AhamStree</title>
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
+
 <body>
   <div id="header"></div>
 
-  <div class="container">
-    <h2 style="margin-top:0;">My Orders</h2>
-
-    <div class="row" style="margin-bottom:12px;">
-      <a class="btn secondary" href="account.html">Account</a>
-      <a class="btn secondary" href="profile.html">Profile</a>
+  <div class="container" style="max-width:980px;">
+    <div style="display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap;align-items:flex-start;">
+      <div>
+        <h2 style="margin:0;">My Orders</h2>
+        <div class="small" style="margin-top:6px;">Your recent orders and payment status.</div>
+      </div>
+      <div style="display:flex;gap:10px;flex-wrap:wrap;">
+        <a class="btn secondary" href="account.html">Account</a>
+        <a class="btn secondary" href="profile.html">Profile</a>
+      </div>
     </div>
 
-    <div id="app" style="display:grid;gap:12px;"></div>
-    <div id="status" class="small" style="margin-top:10px;"></div>
+    <hr />
+
+    <div id="status" class="small">Loading…</div>
+    <div id="list" style="display:grid;gap:12px;margin-top:12px;"></div>
   </div>
 
   <div id="footer"></div>
@@ -40,16 +47,11 @@
     document.getElementById("footer").innerHTML = renderFooter();
     hydrateHeaderAuth();
 
-    const app = document.getElementById("app");
     const status = document.getElementById("status");
-
-    const { data: sess } = await supabase.auth.getSession();
-    const user = sess?.session?.user;
-
-    if (!user) window.location.href = "login.html";
+    const list = document.getElementById("list");
 
     function money(v) {
-      return "₹" + Number(v || 0).toLocaleString("en-IN");
+      return "₹" + Number(v || 0).toLocaleString("en-IN", { maximumFractionDigits: 0 });
     }
 
     function badge(st) {
@@ -63,7 +65,7 @@
         shipped: "Shipped",
         delivered: "Delivered",
       };
-      return map[st] || st;
+      return map[st] || (st || "-");
     }
 
     function renderOrder(o) {
@@ -72,34 +74,60 @@
         .join("");
 
       const payLink = o.razorpay_payment_link_url;
+      const canPay = (o.status === "payment_link_created" || o.status === "payment_failed" || o.status === "expired") && payLink;
 
       return `
         <div class="card">
           <div class="p" style="padding:16px;">
-            <div style="display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap;">
+            <div style="display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap;align-items:flex-start;">
               <div>
                 <div style="font-weight:900;">Order ${o.id}</div>
                 <div class="small" style="margin-top:6px;">
                   Status: <b>${badge(o.status)}</b> • Total: <b>${money(o.total_inr)}</b>
                 </div>
-                <div class="small">Placed: ${new Date(o.created_at).toLocaleString("en-IN")}</div>
+                <div class="small">Placed: ${o.created_at ? new Date(o.created_at).toLocaleString("en-IN") : "-"}</div>
               </div>
 
-              <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:flex-start;">
-                ${
-                  (o.status === "payment_link_created" || o.status === "payment_failed" || o.status === "expired")
-                  && payLink
-                    ? `<a class="btn" href="${payLink}" target="_blank" rel="noopener">Pay now</a>`
-                    : ``
-                }
+              <div style="display:flex;gap:10px;flex-wrap:wrap;">
+                ${canPay ? `<a class="btn" href="${payLink}" target="_blank" rel="noopener">Pay now</a>` : ``}
               </div>
             </div>
-
-            <hr/>
-            ${items}
+            <hr />
+            ${items || `<div class="small" style="opacity:.75;">No items found for this order.</div>`}
           </div>
         </div>
       `;
     }
 
-    status.textConte
+    async function loadOrders() {
+      const { data: sess } = await supabase.auth.getSession();
+      const user = sess?.session?.user;
+      if (!user) {
+        window.location.href = "login.html";
+        return;
+      }
+
+      // IMPORTANT:
+      // This assumes your `orders` table has a `user_id` column.
+      // If your column name differs (e.g., customer_id), tell me and I will adjust.
+      const { data, error } = await supabase
+        .from("orders")
+        .select("id,status,total_inr,created_at,razorpay_payment_link_url, order_items(qty,title,price_inr)")
+        .eq("user_id", user.id)
+        .order("created_at", { ascending: false });
+
+      if (error) {
+        status.textContent = "Could not load orders: " + error.message;
+        list.innerHTML = "";
+        return;
+      }
+
+      const orders = data ?? [];
+      status.textContent = orders.length ? "" : "You have no orders yet.";
+      list.innerHTML = orders.map(renderOrder).join("");
+    }
+
+    loadOrders();
+  </script>
+</body>
+</html>
